# TagStore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_zh_CN.md
assets/: app.rc  app.rc.in  fix_ico.py  generate_ico.py  resources.qrc
docs/: Detailed Design Specification.md  System Requirement Specification.md
i18n/: tagstore_en_US.ts  tagstore_zh_CN.ts
installer/: setup.iss
qml/: DropBalloon.qml  Main.qml
qml/components/: ConflictContent.qml  FileCard.qml  FolderImportContent.qml  GlobalHeader.qml  ResultsGrid.qml  TagChip.qml  TagFilterBar.qml  TagManagerDialog.qml
src/: main.cpp
src/core/: DatabaseManager.cpp  DatabaseManager.h  FileHasher.cpp  FileHasher.h  LLMClient.cpp  LLMClient.h  LanguageManager.cpp  LanguageManager.h  LibraryConfig.cpp  LibraryConfig.h  ThemeManager.cpp  ThemeManager.h
src/models/: LibraryModel.cpp  LibraryModel.h
src/viewmodels/: FileIngestor.cpp  FileIngestor.h
src/workers/: LLMProcessor.cpp  LLMProcessor.h  TextExtractor.cpp  TextExtractor.h
